--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-	<title>
-		my git project
-	</title>
+    <meta charset="utf-8">
+    <title>Blog Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 
-<header>
-	<h1> Expedition</h1>
-</header>
+    <header>
+        <h1>Expedition</h1>
+    </header>
 
+    <div class="container">
+        <main>
+
+        </main>
+    </div>
+
+    <footer>
+        Made with ♥ @ Udacity
+    </footer>
+    <script src="js/app.js"></script>
 </body>
 </html>
